[gd_scene load_steps=7 format=3 uid="uid://bk3wuo6my6lup"]

[ext_resource type="Script" uid="uid://c8pj5ggh7vmg8" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" uid="uid://cgsx7tsyetyet" path="res://scripts/Player.gd" id="2_player"]
[ext_resource type="Script" uid="uid://bl5d32hurk0t1" path="res://scripts/Shelf.gd" id="3_shelf"]
[ext_resource type="Script" uid="uid://rxyomq1xc5k1" path="res://scripts/AudioManager.gd" id="4_audio"]
[ext_resource type="Script" uid="uid://bx4psqu2odh2d" path="res://scripts/UI.gd" id="5_ui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(32, 32)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(552, 264)
script = ExtResource("2_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_player")

[node name="Sprite2D" type="Sprite2D" parent="Player"]

[node name="Node2D" type="Node2D" parent="." groups=["shelves"]]
position = Vector2(120, 120)
script = ExtResource("3_shelf")
color = Color(0.306, 0.804, 0.769, 1)

[node name="ShelfSnacks" type="Node2D" parent="." groups=["shelves"]]
position = Vector2(312, 120)
script = ExtResource("3_shelf")
shelf_type = "snacks"
items = 7
price = 3
color = Color(1, 0.902, 0.427, 1)

[node name="ShelfBento" type="Node2D" parent="." groups=["shelves"]]
position = Vector2(504, 120)
script = ExtResource("3_shelf")
shelf_type = "bento"
items = 6
price = 5
color = Color(1, 0.545, 0.58, 1)

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("4_audio")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ui")

[node name="TitleLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -500.0
offset_right = 150.0
offset_bottom = -470.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.851, 0.239, 1)
theme_override_font_sizes/font_size = 24
text = "Dunkin' - Konbini Simulator"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = -470.0
offset_right = 250.0
offset_bottom = -450.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.667, 0.667, 0.667, 1)
theme_override_font_sizes/font_size = 12
text = "Arrow Keys = Move | E = Checkout/Stock | Space = Grab items"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = 490.0
offset_right = 200.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.42, 0.796, 0.467, 1)
theme_override_font_sizes/font_size = 16
text = "Sales: $0 | Served: 0"
horizontal_alignment = 1
